header-routing/header-reviews-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo
spec:
  hosts:
    - reviews.bookinfo.svc.cluster.local
  http:
  - match:
    - headers:
        user-agent:
          regex: '.*Firefox.*'
    route:
    - destination:
        host: reviews.bookinfo.svc.cluster.local
        subset: v3
  - route:
    - destination:
        host: reviews.bookinfo.svc.cluster.local
#        subset: v1
